--- a/assets/css/header-footer.css
+++ b/assets/css/header-footer.css
@@ -3,16 +3,12 @@
 *********************** HEADER / FOOTER **************************
 ****************************************************************/
 
-body {
-  padding-top: 76px;
-}
-
 /* =========================
    HEADER
 ========================= */
 
 .site-header {
-  position: fixed;
+  position: sticky;
   top: 0;
   left: 0;
   right: 0;
